@@ -1,6 +1,10 @@
                                                         -*- coding: utf-8 -*-
 Changes with Apache 2.2.6
 
+  *) proxy/ajp_header.c: Backport of an AJP protocol fix for EBCDIC
+     On EBCDIC machines, the status_line string was incorrectly converted
+     twice. [Jean-Frederic Clere, Martin Kraemer] (based on rev. 357022)
+
   *) mod_dumpio: Fix for correct dumping of traffic on EBCDIC hosts
      Data had been incorrectly converted twice, resulting in
      garbled log output. [Martin Kraemer]
